--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
       "async": "0.9.0",
       "retry": "0.6.1",
       "jssha": "1.5.0",
-      "socket.io-client": "1.3.6"
+      "socket.io-client": "1.3.6",
+      "es6-promise": "*"
   },
   "devDependencies": {
   },
