--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
       "retry": "0.6.1",
       "jssha": "1.5.0",
       "socket.io-client": "1.3.6",
-      "es6-promise": "*"
+      "es6-promise": "*",
+      "jitsi-meet-logger": "jitsi/jitsi-meet-logger"
   },
   "devDependencies": {
     "browserify": "11.1.x",
