Fixes warnings, sets up .jshintrc and ignores files in .jshintignore.

--- a/.jshintignore
+++ b/.jshintignore
@@ -1,6 +1,32 @@
 node_modules
 libs
-replacement.js
-prezi.js
-muc.js
-app.js
+lib-jitsi-meet.js
+doc
+
+
+modules/xmpp/xmpp.js
+modules/xmpp/strophe.jingle.js
+modules/xmpp/TraceablePeerConnection.js
+modules/xmpp/SDPUtil.js
+modules/xmpp/SDP.js
+modules/xmpp/strophe.emuc.js
+modules/xmpp/JingleSessionPC.js
+modules/xmpp/LocalSSRCReplacement.js
+modules/xmpp/ChatRoom.js
+modules/xmpp/ChatRoom.js
+modules/statistics/RTPStatsCollector.js
+modules/statistics/LocalStatsCollector.js
+modules/settings/Settings.js
+modules/connectionquality/connectionquality.js
+modules/RTC/adapter.screenshare.js
+modules/statistics/statistics.js
+modules/RTC/RTC.js
+modules/RTC/RTCUtils.js
+modules/RTC/DataChannels.js
+modules/RTC/JitsiLocalTrack.js
+modules/RTC/JitsiRemoteTrack.js
+modules/RTC/JitsiTrack.js
+JitsiParticipant.js
+JitsiMeetJS.js
+JitsiConnection.js
+JitsiConference.js
