--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,5 @@
 {
+    // Refer to http://jshint.com/docs/options/ for an exhaustive list of options
     "asi": false, // true: Tolerate Automatic Semicolon Insertion (no semicolons)
     "expr": true, // true: Tolerate `ExpressionStatement` as Programs
     "loopfunc": true, // true: Tolerate functions being defined in loops
@@ -12,5 +13,7 @@
     "indent": 4, // {int} Number of spaces to use for indentation
     "latedef": true, // true: Require variables/functions to be defined before being used
     "newcap": true, // true: Require capitalization of all constructor functions e.g. `new F()`
-    "maxlen": 80    // {int} Max number of characters per line
+    "maxlen": 80, // {int} Max number of characters per line
+    "latedef": false, //This option prohibits the use of a variable before it was defined
+    "laxbreak": true //Ignore line breaks around "=", "==", "&&", etc.
 }
