--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "events": "*",
     "pako": "*",
-    "sdp-interop": "0.1.10",
-    "sdp-transform": "1.4.1",
-    "sdp-simulcast": "0.1.2",
+    "sdp-interop": "0.1.11",
+    "sdp-transform": "1.5.*",
+    "sdp-simulcast": "0.1.3",
     "async": "0.9.0",
     "retry": "0.6.1",
     "jssha": "1.5.0",
