--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-*.bundle.js -text -diff
-.editorconfig
+lib-jitsi-meet.min.js -text -diff
+lib-jitsi-meet.js -text -diff
+lib-jitsi-meet.js.map -text -diff
