--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "postinstall": "npm run deploy",
 
     "browserify": "browserify -d JitsiMeetJS.js -s JitsiMeetJS | exorcist lib-jitsi-meet.js.map > lib-jitsi-meet.js ",
-    "version": "VERSION=`./get-version.sh` && sed -i '' s/{#COMMIT_HASH#}/${VERSION}/g lib-jitsi-meet.js",
+    "version": "VERSION=`./get-version.sh` && sed -i -e s/{#COMMIT_HASH#}/${VERSION}/g lib-jitsi-meet.js",
     "uglifyjs": "uglifyjs -p relative lib-jitsi-meet.js -o lib-jitsi-meet.min.js --source-map lib-jitsi-meet.min.map --in-source-map lib-jitsi-meet.js.map",
 
     "deploy": "DEPLOY_DIR='../../libs' && [ -d $DEPLOY_DIR ] && cp lib-jitsi-meet.* $DEPLOY_DIR",
