--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jshint": "^2.8.0",
     "precommit-hook": "^3.0.0",
     "exorcist": "*",
-    "uglify-js": "2.4.24"
+    "uglify-js": "2.4.24",
+    "watchify": "^3.7.0"
   },
   "scripts": {
     "install": "npm run browserify && npm run version && npm run uglifyjs",
@@ -42,7 +43,7 @@
     "browserify": "browserify -d JitsiMeetJS.js -s JitsiMeetJS | exorcist lib-jitsi-meet.js.map > lib-jitsi-meet.js ",
     "version": "VERSION=`./get-version.sh` && echo lib-jitsi-meet version is:${VERSION} && sed -i'' -e s/{#COMMIT_HASH#}/${VERSION}/g lib-jitsi-meet.js",
     "uglifyjs": "uglifyjs -p relative lib-jitsi-meet.js -o lib-jitsi-meet.min.js --source-map lib-jitsi-meet.min.map --in-source-map lib-jitsi-meet.js.map",
-
+    "watch": "watchify JitsiMeetJS.js -s JitsiMeetJS -o lib-jitsi-meet.js -v",
     "lint": "jshint .",
     "validate": "npm ls"
   },
