--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@cloudversify/lib-jitsi-meet",
-  "version": "1.0.0",
-  "description": "JS library for accessing Jitsi server side deployments - forked and modified by Cloudversify Inc.",
+  "name": "lib-jitsi-meet",
+  "version": "0.0.0",
+  "description": "JS library for accessing Jitsi server side deployments",
   "repository": {
     "type": "git",
-    "url": "git://github.com/cloudversify/jitsi-meet"
+    "url": "git://github.com/jitsi/jitsi-meet"
   },
   "keywords": [
     "jingle",
@@ -38,9 +38,9 @@
     "watchify": "^3.7.0"
   },
   "scripts": {
-    "install": "npm run browserify && npm run uglifyjs",
+    "install": "npm run browserify && npm run version && npm run uglifyjs",
 
-    "browserify": "browserify -d JitsiMeetJS.js -s JitsiMeetJS | exorcist lib-jitsi-meet.js.map > lib-jitsi-meet.js && [ -s lib-jitsi-meet.js ]",
+    "browserify": "browserify -d JitsiMeetJS.js -s JitsiMeetJS | exorcist lib-jitsi-meet.js.map > lib-jitsi-meet.js ",
     "version": "VERSION=`./get-version.sh` && echo lib-jitsi-meet version is:${VERSION} && sed -i'' -e s/{#COMMIT_HASH#}/${VERSION}/g lib-jitsi-meet.js",
     "uglifyjs": "uglifyjs -p relative lib-jitsi-meet.js -o lib-jitsi-meet.min.js --source-map lib-jitsi-meet.min.map --in-source-map lib-jitsi-meet.js.map",
     "watch": "watchify JitsiMeetJS.js -s JitsiMeetJS -o lib-jitsi-meet.js -v",
