Update to use latest AdapterJS, fix filename to match upstream name.

--- a/.jshintignore
+++ b/.jshintignore
@@ -19,7 +19,7 @@ modules/xmpp/ChatRoom.js
 modules/statistics/RTPStatsCollector.js
 modules/statistics/LocalStatsCollector.js
 modules/connectionquality/connectionquality.js
-modules/RTC/adapter.screenshare.js
+modules/RTC/adapter.js
 modules/statistics/statistics.js
 modules/RTC/RTC.js
 modules/RTC/RTCUtils.js
