--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jitsi-meet-logger": "git+https://github.com/jitsi/jitsi-meet-logger.git",
     "strophe": "^1.2.2",
     "strophejs-plugins": "^0.0.6",
-    "socket.io-client": "1.3.6"
+    "socket.io-client": "1.3.6",
+    "current-executing-script": "*"
   },
   "devDependencies": {
     "browserify": "11.1.x",
