--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "async": "0.9.0",
     "retry": "0.6.1",
     "jssha": "1.5.0",
-    "es6-promise": "*",
     "jitsi-meet-logger": "git+https://github.com/jitsi/jitsi-meet-logger.git",
     "strophe": "^1.2.2",
     "strophejs-plugins": "^0.0.6",
@@ -31,12 +30,25 @@
     "current-executing-script": "*"
   },
   "devDependencies": {
+    "babelify": "*",
+    "babel-preset-es2015": "*",
+    "babel-polyfill": "*",
     "browserify": "11.1.x",
     "jshint": "^2.8.0",
     "precommit-hook": "^3.0.0",
     "exorcist": "*",
     "uglify-js": "2.4.24",
     "watchify": "^3.7.0"
+  },
+  "babel": {
+    "presets": ["es2015"]
+  },
+  "browserify": {
+    "transform": [
+      ["babelify", {
+        "ignore": ["node_modules", "modules/RTC/adapter.screenshare.js"]
+      }]
+    ]
   },
   "scripts": {
     "install": "npm run browserify && npm run version && npm run uglifyjs",
