--- a/.jshintrc
+++ b/.jshintrc
@@ -3,6 +3,7 @@
     "asi": false, // true: Tolerate Automatic Semicolon Insertion (no semicolons)
     "browser": true, // Web Browser (window, document, etc)
     "curly": false, // true: Require {} for every new block or scope
+    "esversion": 6,
     "evil": true, // true: Tolerate use of `eval` and `new Function()`
     "expr": true, // true: Tolerate `ExpressionStatement` as Programs
     "indent": 4, // {int} Number of spaces to use for indentation
