--- a/package.json
+++ b/package.json
@@ -40,20 +40,9 @@
     "uglify-js": "2.4.24",
     "watchify": "^3.7.0"
   },
-  "babel": {
-    "presets": ["es2015"]
-  },
-  "browserify": {
-    "transform": [
-      ["babelify", {
-        "ignore": ["node_modules", "modules/RTC/adapter.screenshare.js"]
-      }]
-    ]
-  },
   "scripts": {
     "install": "npm run browserify && npm run version && npm run uglifyjs",
-
-    "browserify": "browserify -d JitsiMeetJS.js -s JitsiMeetJS | exorcist lib-jitsi-meet.js.map > lib-jitsi-meet.js && [ -s lib-jitsi-meet.js ]",
+    "browserify": "node ./start_browserify.js | exorcist lib-jitsi-meet.js.map > lib-jitsi-meet.js && [ -s lib-jitsi-meet.js ]",
     "version": "VERSION=`./get-version.sh` && echo lib-jitsi-meet version is:${VERSION} && sed -i'' -e s/{#COMMIT_HASH#}/${VERSION}/g lib-jitsi-meet.js",
     "uglifyjs": "uglifyjs -p relative lib-jitsi-meet.js -o lib-jitsi-meet.min.js --source-map lib-jitsi-meet.min.map --in-source-map lib-jitsi-meet.js.map",
     "watch": "watchify JitsiMeetJS.js -s JitsiMeetJS -o lib-jitsi-meet.js -v",
