--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JS library for accessing Jitsi server side deployments",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jitsi/jitsi-meet"
+    "url": "git://github.com/jitsi/lib-jitsi-meet"
   },
   "keywords": [
     "jingle",
@@ -15,37 +15,33 @@
   "author": "",
   "readmeFilename": "README.md",
   "dependencies": {
-    "events": "*",
-    "pako": "*",
-    "sdp-interop": "0.1.11",
-    "sdp-transform": "1.5.*",
-    "sdp-simulcast": "0.1.7",
     "async": "0.9.0",
-    "retry": "0.6.1",
+    "current-executing-script": "*",
+    "events": "*",
+    "jitsi-meet-logger": "jitsi/jitsi-meet-logger",
     "jssha": "1.5.0",
-    "jitsi-meet-logger": "git+https://github.com/jitsi/jitsi-meet-logger.git",
-    "strophe": "^1.2.2",
-    "strophejs-plugins": "^0.0.6",
+    "pako": "*",
+    "retry": "0.6.1",
+    "sdp-interop": "0.1.11",
+    "sdp-simulcast": "0.1.7",
+    "sdp-transform": "1.5.*",
     "socket.io-client": "1.3.6",
-    "current-executing-script": "*"
+    "strophe": "^1.2.2",
+    "strophejs-plugins": "^0.0.6"
   },
   "devDependencies": {
-    "babelify": "*",
-    "babel-preset-es2015": "*",
+    "babel-core": "*",
+    "babel-loader": "*",
     "babel-polyfill": "*",
-    "browserify": "11.1.x",
+    "babel-preset-es2015": "*",
+    "babel-register": "*",
     "jshint": "^2.8.0",
     "precommit-hook": "^3.0.0",
-    "exorcist": "*",
-    "uglify-js": "2.4.24",
-    "watchify": "^3.7.0"
+    "string-replace-loader": "*",
+    "webpack": "*"
   },
   "scripts": {
-    "install": "npm run browserify && npm run version && npm run uglifyjs",
-    "browserify": "node ./start_browserify.js | exorcist lib-jitsi-meet.js.map > lib-jitsi-meet.js && [ -s lib-jitsi-meet.js ]",
-    "version": "VERSION=`./get-version.sh` && echo lib-jitsi-meet version is:${VERSION} && sed -i'' -e s/{#COMMIT_HASH#}/${VERSION}/g lib-jitsi-meet.js",
-    "uglifyjs": "uglifyjs -p relative lib-jitsi-meet.js -o lib-jitsi-meet.min.js --source-map lib-jitsi-meet.min.map --in-source-map lib-jitsi-meet.js.map",
-    "watch": "watchify JitsiMeetJS.js -s JitsiMeetJS -o lib-jitsi-meet.js -v",
+    "install": "webpack && webpack -p",
     "lint": "jshint .",
     "validate": "npm ls"
   },
