Do not build unminimized artifact by default
The build process is capable of bundling both minimized and unminimized
artifacts for lib-jitsi-meet. However, there does not seem to be a good
reason to (1) always wait for the building of the two versions and (2)
distributing the unminimized artifact.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "webpack": "*"
   },
   "scripts": {
-    "install": "webpack && webpack -p",
+    "install": "webpack -p",
     "lint": "jshint .",
     "validate": "npm ls"
   },
