Renames a reference missed in the last commit.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jingle",
     "webrtc",
     "xmpp",
-    "browser"
+    "browser",
+    "jitsi"
   ],
   "author": "",
   "readmeFilename": "README.md",
