--- a/package.json
+++ b/package.json
@@ -38,12 +38,18 @@
     "jshint": "^2.8.0",
     "precommit-hook": "^3.0.0",
     "string-replace-loader": "*",
-    "webpack": "*"
+    "webpack": "*",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.13.2",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-webpack": "^1.6.0"
   },
   "scripts": {
     "install": "webpack -p",
     "lint": "jshint . && eslint .",
-    "validate": "npm ls"
+    "validate": "npm ls",
+    "test": "./node_modules/karma/bin/karma start karma.conf.js"
   },
   "pre-commit": [
     "lint"
