build: add yarn lock file
This switched the install script to postinstall, which is functionally
equivalent, but works in projects depending on lib-jitsi-meet instead of
failing.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webpack": "1.14.0"
   },
   "scripts": {
-    "install": "webpack -p",
+    "postinstall": "webpack -p",
     "lint": "jshint . && eslint .",
     "test": "karma start karma.conf.js",
     "validate": "npm ls"
