--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
   },
   "devDependencies": {
     "babel-core": "6.23.1",
+    "babel-eslint": "7.1.1",
     "babel-loader": "6.3.2",
     "babel-polyfill": "6.23.0",
     "babel-preset-es2015": "6.22.0",
     "eslint": "3.16.1",
+    "eslint-plugin-flowtype": "2.30.0",
+    "flow-bin": "0.38.0",
     "jasmine-core": "2.5.2",
     "jshint": "2.9.4",
     "karma": "0.13.22",
@@ -46,7 +49,7 @@
   },
   "scripts": {
     "install": "webpack -p",
-    "lint": "jshint . && eslint .",
+    "lint": "jshint . && eslint . && flow",
     "test": "karma start karma.conf.js",
     "validate": "npm ls"
   },
