--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "6.22.0",
     "eslint": "3.16.1",
     "eslint-plugin-flowtype": "2.30.0",
+    "eslint-plugin-import": "2.2.0",
     "flow-bin": "0.38.0",
     "jasmine-core": "2.5.2",
     "jshint": "2.9.4",
