--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-eslint": "7.2.3",
     "babel-loader": "7.0.0",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
     "eslint": "3.19.0",
     "eslint-plugin-flowtype": "2.30.4",
     "eslint-plugin-import": "2.3.0",
