feat(1080p): support on chrome >= 61 using adapter
- Add a new browser check so adapter shim usage can be gated.
- Get track resolution for stats from the track itself to account
  for browser resolution fallback logic. Do this only if
  we can be sure adapter has shimmed it in.
- Create a new getUserMediaFlow, with RTC being the orchestration
  for various RTCUtils calls.
- Remove connection quality stat "resolution" which was being
  emitted but not used but listeners.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sdp-transform": "2.3.0",
     "strophe.js": "1.2.14",
     "strophejs-plugin-disco": "0.0.2",
+    "webrtc-adapter": "webrtc/adapter#1eec19782b4058d186341263e7d049cea3e3290a",
     "yaeti": "1.0.1"
   },
   "devDependencies": {
