--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,7 @@ lib-jitsi-meet.min.map
 # Third-party source code which we (1) do not want to modify or (2) try to
 # modify as little as possible.
 doc/example/libs/*
+flow-typed/*
 modules/RTC/adapter.screenshare.js
 
 # ESLint will by default ignore its own configuration file. However, there does
