--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "sdp-interop": "0.1.12",
     "sdp-simulcast": "0.2.1",
     "sdp-transform": "2.3.0",
-    "strophe": "1.2.4",
-    "strophejs-plugins": "0.0.7",
+    "strophe.js": "1.2.14",
+    "strophejs-plugin-disco": "0.0.2",
     "yaeti": "1.0.1"
   },
   "devDependencies": {
