--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-webpack": "1.8.1",
     "precommit-hook": "3.0.0",
     "string-replace-loader": "1.3.0",
+    "uglifyjs-webpack-plugin": "1.1.1",
     "webpack": "3.8.1"
   },
   "scripts": {
