feat(tests): run on phantomjs by default

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
+    "core-js": "2.5.1",
     "eslint": "4.8.0",
     "eslint-plugin-flowtype": "2.37.0",
     "eslint-plugin-import": "2.7.0",
@@ -40,6 +41,7 @@
     "jasmine-core": "2.5.2",
     "karma": "0.13.22",
     "karma-chrome-launcher": "0.2.3",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-jasmine": "0.3.8",
     "karma-webpack": "1.8.1",
     "precommit-hook": "3.0.0",
