--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.1",
     "babel-loader": "7.1.2",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-env": "1.6.1",
     "babel-preset-stage-1": "6.24.1",
     "core-js": "2.5.1",
     "eslint": "4.8.0",
