--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "dependencies": {
     "async": "0.9.0",
     "current-executing-script": "0.1.3",
-    "jitsi-meet-logger": "jitsi/jitsi-meet-logger",
+    "jitsi-meet-logger": "github:jitsi/jitsi-meet-logger#6fff754a77a56ab52499f3559105a15886942a1e",
     "react-native-callstats": "3.24.6",
     "sdp-interop": "0.1.12",
     "sdp-simulcast": "0.2.1",
     "sdp-transform": "2.3.0",
     "strophe.js": "1.2.14",
     "strophejs-plugin-disco": "0.0.2",
-    "webrtc-adapter": "webrtc/adapter#1eec19782b4058d186341263e7d049cea3e3290a",
+    "webrtc-adapter": "github:webrtc/adapter#1eec19782b4058d186341263e7d049cea3e3290a",
     "yaeti": "1.0.1"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
     "babel-preset-stage-1": "6.24.1",
     "core-js": "2.5.1",
     "eslint": "4.8.0",
-    "eslint-config-jitsi": "jitsi/eslint-config-jitsi#v0.1",
+    "eslint-config-jitsi": "github:jitsi/eslint-config-jitsi#v0.1",
     "eslint-plugin-flowtype": "2.37.0",
     "eslint-plugin-import": "2.7.0",
     "flow-bin": "0.53.0",
