--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
     "babel-preset-stage-1": "6.24.1",
+    "bowser": "1.9.1",
     "core-js": "2.5.1",
     "eslint": "4.12.1",
     "eslint-config-jitsi": "github:jitsi/eslint-config-jitsi#v0.1",
