ref(browser): Use js-utils.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "0.9.0",
     "current-executing-script": "0.1.3",
     "jitsi-meet-logger": "github:jitsi/jitsi-meet-logger#6fff754a77a56ab52499f3559105a15886942a1e",
+    "js-utils": "github:jitsi/js-utils#fa6eb93d1792b75e25bf84b97e51672e70d900de",
     "react-native-callstats": "3.27.0",
     "sdp-interop": "0.1.12",
     "sdp-simulcast": "0.2.1",
@@ -34,7 +35,6 @@
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
     "babel-preset-stage-1": "6.24.1",
-    "bowser": "1.9.1",
     "core-js": "2.5.1",
     "eslint": "4.12.1",
     "eslint-config-jitsi": "github:jitsi/eslint-config-jitsi#v0.1",
