--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "author": "",
   "readmeFilename": "README.md",
   "dependencies": {
+    "@jitsi/sdp-interop": "0.1.13",
+    "@jitsi/sdp-simulcast": "0.2.1",
     "async": "0.9.0",
     "current-executing-script": "0.1.3",
     "jitsi-meet-logger": "github:jitsi/jitsi-meet-logger#6fff754a77a56ab52499f3559105a15886942a1e",
     "js-utils": "github:jitsi/js-utils#d4b78721b754a15c2588b7b0c621a9fff6fa1363",
     "react-native-callstats": "3.27.0",
-    "sdp-interop": "0.1.13",
-    "sdp-simulcast": "0.2.1",
     "sdp-transform": "2.3.0",
     "strophe.js": "1.2.15",
     "strophejs-plugin-disco": "0.0.2",
