--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-eslint": "8.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
+    "babel-preset-flow": "6.23.0",
     "babel-preset-stage-1": "6.24.1",
     "core-js": "2.5.1",
     "eslint": "4.12.1",
