--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-loader": "8.0.4",
     "core-js": "2.5.1",
     "eslint": "4.12.1",
-    "eslint-config-jitsi": "github:jitsi/eslint-config-jitsi#v0.1",
+    "eslint-config-jitsi": "github:jitsi/eslint-config-jitsi#7474f6668515eb5852f1273dc5a50b940a550d3f",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
     "flow-bin": "0.67.1",
