--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "karma-jasmine": "1.1.2",
     "karma-webpack": "3.0.0",
     "precommit-hook": "3.0.0",
-    "string-replace-loader": "1.3.0",
-    "uglifyjs-webpack-plugin": "1.2.2",
-    "webpack": "3.9.1"
+    "string-replace-loader": "2.1.1",
+    "webpack": "4.26.1",
+    "webpack-cli": "3.1.2"
   },
   "scripts": {
     "lint": "eslint . && flow",
