--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "precommit-hook": "3.0.0",
     "string-replace-loader": "2.1.1",
     "webpack": "4.26.1",
+    "webpack-bundle-analyzer": "3.4.1",
     "webpack-cli": "3.1.2"
   },
   "scripts": {
