misc: prepare repository to publish to npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lib-jitsi-meet",
-  "version": "0.0.0",
+  "name": "@jitsi/lib-jitsi-meet",
+  "version": "2.0.5276",
   "description": "JS library for accessing Jitsi server side deployments",
   "repository": {
     "type": "git",
@@ -62,12 +62,14 @@
   },
   "scripts": {
     "lint": "eslint . && flow",
-    "postinstall": "webpack -p",
+    "build": "webpack -p",
     "test": "karma start karma.conf.js",
     "test-watch": "karma start karma.conf.js --no-single-run",
     "validate": "npm ls",
-    "watch": "webpack --config webpack.config.js --watch --mode development"
+    "watch": "webpack --config webpack.config.js --watch --mode development",
+    "prepack": "npm install && npm run build",
+    "release": "npm publish --access public ."
   },
-  "main": "./index.js",
+  "main": "./lib-jitsi-meet.min.js",
   "license": "Apache-2.0"
 }
