--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "readmeFilename": "README.md",
   "dependencies": {
-    "@jitsi/sdp-interop": "1.0.0",
+    "@jitsi/sdp-interop": "file:../sdp-interop",
     "@jitsi/sdp-simulcast": "0.3.0",
     "async": "0.9.0",
     "current-executing-script": "0.1.3",
@@ -62,10 +62,6 @@
     "test-watch": "karma start karma.conf.js --no-single-run",
     "validate": "npm ls"
   },
-  "pre-commit": [
-    "lint",
-    "test"
-  ],
   "main": "./index.js",
   "license": "Apache-2.0"
 }
