--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "author": "",
   "readmeFilename": "README.md",
   "dependencies": {
+    "@jitsi/js-utils": "1.0.0",
     "@jitsi/sdp-interop": "1.0.3",
     "@jitsi/sdp-simulcast": "0.3.0",
     "async": "0.9.0",
     "current-executing-script": "0.1.3",
     "jitsi-meet-logger": "github:jitsi/jitsi-meet-logger#5ec92357570dc8f0b7ffc1528820721c84c6af8b",
-    "js-utils": "github:jitsi/js-utils#cf11996bd866fdb47326c59a5d3bc24be17282d4",
     "lodash.clonedeep": "4.5.0",
     "lodash.isequal": "4.5.0",
     "sdp-transform": "2.3.0",
