--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@jitsi/sdp-interop": "1.0.3",
     "@jitsi/sdp-simulcast": "0.3.0",
     "async": "0.9.0",
+    "base64-js": "1.3.1",
     "current-executing-script": "0.1.3",
     "jitsi-meet-logger": "github:jitsi/jitsi-meet-logger#5ec92357570dc8f0b7ffc1528820721c84c6af8b",
     "lodash.clonedeep": "4.5.0",
+    "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
     "sdp-transform": "2.3.0",
     "strophe.js": "1.3.4",
     "strophejs-plugin-disco": "0.0.2",
     "strophejs-plugin-stream-management": "github:jitsi/strophejs-plugin-stream-management#001cf02bef2357234e1ac5d163611b4d60bf2b6a",
+    "uuid": "8.1.0",
     "webrtc-adapter": "7.5.0"
   },
   "devDependencies": {
