--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "flow-bin": "0.104.0",
     "jasmine-core": "3.5.0",
     "karma": "5.1.1",
+    "karma-babel-preprocessor": "^8.0.1",
     "karma-chrome-launcher": "3.1.0",
     "karma-jasmine": "3.1.1",
     "karma-sourcemap-loader": "0.3.7",
